# i18n-platform

./: .env  .gitignore  Cargo.toml  README.md
config/: casbin_policy.csv
doc/: design.md
migrations/: 20250707_create_tables.sql  20250707_init_phrase_types.sql  20250708_init_casbin_policies.sql
src/: config.rs  errors.rs  main.rs  schema.rs
src/constants/: mod.rs  user_const.rs
src/dtos/: common.rs  language.rs  mod.rs  module.rs  phrase.rs  phrase_type.rs  project.rs  screenshot.rs  term.rs  translation.rs  user.rs
src/middleware/: auth.rs  casbin.rs  error.rs  mod.rs
src/models/: enums.rs  language.rs  mod.rs  module.rs  phrase.rs  phrase_type.rs  project.rs  screenshot.rs  term.rs  translation.rs  user.rs
src/repositories/: base_repo.rs  language_repo.rs  mod.rs  module_repo.rs  phrase_repo.rs  phrase_type_repo.rs  project_repo.rs  screenshot_repo.rs  term_repo.rs  translation_repo.rs  user_repo.rs
src/routes/: auth.rs  language.rs  mod.rs  module.rs  phrase.rs  phrase_type.rs  project.rs  screenshot.rs  term.rs  translation.rs  user.rs
src/services/: base_service.rs  language_service.rs  mod.rs  module_service.rs  phrase_service.rs  phrase_type_service.rs  project_service.rs  screenshot_service.rs  term_service.rs  translation_service.rs  user_service.rs
src/utils/: base64.rs  casbin.rs  database.rs  jwt.rs  kafka.rs  mod.rs  password.rs  redis.rs  response.rs  storage.rs
