[package]
name = "i18n-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
actix-web = "4.4"
actix-cors = "0.6"
actix-multipart = "0.6"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }

# 缓存
redis = { version = "0.24", features = ["tokio-comp"]}

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置
dotenv = "0.15"
lazy_static = "1.4"

# 认证与权限
jsonwebtoken = "9.2"
bcrypt = "0.15"
casbin = { version = "2.0.9", features = ["runtime-tokio", "logging"] }

# 存储
aws-sdk-s3 = { version = "1.96", features = ["behavior-version-latest"] }

# 消息队列
rdkafka = { version = "0.38", features = ["cmake-build"] }

# 工具
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
validator = { version = "0.16", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.36", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
fake = { version = "2.9", features = ['derive'] }
